RESOLVED FIXED200026
WebGL: premultipliedAlpha=false is composited incorrectly
https://bugs.webkit.org/show_bug.cgi?id=200026
Summary WebGL: premultipliedAlpha=false is composited incorrectly
Gregg Tavares
Reported 2019-07-22 22:00:04 PDT
Created attachment 374674 [details] testcase - rectangle should be light blue (success) or white (fail) See testcase. Rectangle should be light blue (success) or white (fail) Note there is an 8yr old open bug https://bugs.webkit.org/show_bug.cgi?id=55509 But that bug appears to be resolved.
Attachments
testcase - rectangle should be light blue (success) or white (fail) (284 bytes, text/html)
2019-07-22 22:00 PDT, Gregg Tavares
no flags
screenshot of correct behavior (chrome, firefox) (33.92 KB, image/png)
2019-07-22 22:02 PDT, Gregg Tavares
no flags
screenshots of incorrect behavior (safari) (22.04 KB, image/png)
2019-07-22 22:03 PDT, Gregg Tavares
no flags
Gregg Tavares
Comment 1 2019-07-22 22:02:25 PDT
Created attachment 374675 [details] screenshot of correct behavior (chrome, firefox)
Gregg Tavares
Comment 2 2019-07-22 22:03:05 PDT
Created attachment 374676 [details] screenshots of incorrect behavior (safari)
Radar WebKit Bug Importer
Comment 3 2019-07-24 13:06:02 PDT
Kimmo Kinnunen
Comment 4 2022-04-22 00:23:55 PDT
*** Bug 230619 has been marked as a duplicate of this bug. ***
Kimmo Kinnunen
Comment 5 2022-04-22 00:25:17 PDT
*** Bug 226254 has been marked as a duplicate of this bug. ***
Kimmo Kinnunen
Comment 6 2022-04-22 00:26:07 PDT
see the deps for tests (if needed).
Kimmo Kinnunen
Comment 7 2023-10-27 04:28:29 PDT
*** Bug 263771 has been marked as a duplicate of this bug. ***
Kimmo Kinnunen
Comment 8 2023-11-07 05:18:26 PST
*** Bug 264081 has been marked as a duplicate of this bug. ***
Karl Dubost
Comment 9 2024-03-05 20:49:27 PST
*** Bug 269669 has been marked as a duplicate of this bug. ***
Kimmo Kinnunen
Comment 10 2026-09-03 09:06:57 PDT
EWS
Comment 11 2026-09-08 03:46:21 PDT
Committed 320650@main (3e12766ced21): <https://commits.webkit.org/320650@main> Reviewed commits have been landed. Closing PR #73156 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.