WebGL: premultipliedAlpha=false is composited incorrectly https://bugs.webkit.org/show_bug.cgi?id=200026 rdar://53509398

Reviewed by NOBODY (OOPS!).

Implement unpremultiplied compositing by tagging the IOSurface
with the unpremultiplied contents tag.

* Source/WTF/wtf/spi/cocoa/IOSurfaceSPI.h:
* Source/WebCore/Configurations/AllowedSPI.toml:
* Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::GraphicsContextGLCocoa::createDrawingBuffer):
* Source/WebCore/platform/graphics/cocoa/IOSurface.h:
* Source/WebCore/platform/graphics/cocoa/IOSurface.mm:
(WebCore::IOSurface::create):
(WebCore::alphaChannelModeValue):
(WebCore::IOSurface::IOSurface):
(WebCore::m_name):
(WebCore::IOSurface::setContentsAlphaPremultiplication):